--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Receita</title>
 
+  <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <div id="page">
@@ -15,7 +22,7 @@
         <h1>Cupcake de café com chantilly</h1>
         <p>
           O bolinho perfeito para acompanhar o café de todos os dias. É muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou!
-        </p>
+        </p><br>
         <p>
           Tempo: 1h10 <br>
           Rendimento: 12 porções <br>
