--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
 
       </section>      
     </main>
-
   </div>
-    
+  <footer>
+    Feito com ❤️ por Emanuel Bonfim
+  </footer>
 
 </body>
 </html>
